syntax = "proto3";

package products;

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (Product) {}
  rpc GetProduct (GetProductRequest) returns (Product) {}
  rpc GetAllProducts (Empty) returns (ProductList) {}
  rpc UpdateProduct (UpdateProductRequest) returns (Product) {}
  rpc DeleteProduct (DeleteProductRequest) returns (Empty) {}
}

message Product {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
}

message GetProductRequest {
  int32 id = 1;
}

message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message DeleteProductRequest {
  int32 id = 1;
}

message Empty {}

message ProductList {
  repeated Product products = 1;
}
